--- a/apps/web/src/features/homepage/FeeSection/FeeSection.module.scss
+++ b/apps/web/src/features/homepage/FeeSection/FeeSection.module.scss
@@ -113,8 +113,8 @@
 }
 
 .fees__emphasis > div {
-  padding-inline: 0.06em;
-  margin-inline: -0.06em;
+  padding-inline: 0.15em;
+  margin-inline: -0.15em;
 }
 
 .fees__body {
