--- a/apps/web/src/features/homepage/Receipts/Receipts.module.scss
+++ b/apps/web/src/features/homepage/Receipts/Receipts.module.scss
@@ -82,8 +82,8 @@
 }
 
 .receipts__emphasis > div {
-  padding-inline: 0.06em;
-  margin-inline: -0.06em;
+  padding-inline: 0.15em;
+  margin-inline: -0.15em;
 }
 
 .receipts__subtitle {
