--- a/apps/web/src/features/homepage/TrustLayer/TrustLayer.module.scss
+++ b/apps/web/src/features/homepage/TrustLayer/TrustLayer.module.scss
@@ -85,8 +85,8 @@
 }
 
 .proof__emphasis > div {
-  padding-inline: 0.06em;
-  margin-inline: -0.06em;
+  padding-inline: 0.15em;
+  margin-inline: -0.15em;
 }
 
 .proof__subtitle {
